--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,52 @@
-Flask
-scikit-learn
-pandas
-numpy
-matplotlib
+backcall @ file:///home/conda/feedstock_root/build_artifacts/backcall_1592338393461/work
+backports.functools-lru-cache @ file:///home/conda/feedstock_root/build_artifacts/backports.functools_lru_cache_1702571698061/work
+certifi @ file:///home/conda/feedstock_root/build_artifacts/certifi_1725278078093/work/certifi
+click==8.1.8
+colorama @ file:///home/conda/feedstock_root/build_artifacts/colorama_1666700638685/work
+cycler==0.11.0
+debugpy @ file:///D:/bld/debugpy_1660619187469/work
+decorator @ file:///home/conda/feedstock_root/build_artifacts/decorator_1641555617451/work
+entrypoints @ file:///home/conda/feedstock_root/build_artifacts/entrypoints_1643888246732/work
+Flask==2.2.5
+fonttools==4.38.0
+gunicorn==23.0.0
+importlib-metadata==6.7.0
+ipykernel @ file:///D:/bld/ipykernel_1666723449132/work
+ipython @ file:///D:/bld/ipython_1651240762678/work
+itsdangerous==2.1.2
+jedi @ file:///home/conda/feedstock_root/build_artifacts/jedi_1696326070614/work
+Jinja2==3.1.6
+joblib==1.3.2
+jupyter_client @ file:///home/conda/feedstock_root/build_artifacts/jupyter_client_1673615989977/work
+jupyter_core @ file:///D:/bld/jupyter_core_1658332454038/work
+kiwisolver==1.4.5
+MarkupSafe==2.1.5
+matplotlib==3.5.3
+matplotlib-inline @ file:///home/conda/feedstock_root/build_artifacts/matplotlib-inline_1713250518406/work
+nest_asyncio @ file:///home/conda/feedstock_root/build_artifacts/nest-asyncio_1705850609492/work
+numpy==1.21.6
+packaging==24.0
+pandas==1.1.5
+parso @ file:///home/conda/feedstock_root/build_artifacts/parso_1712320355065/work
+pickleshare @ file:///home/conda/feedstock_root/build_artifacts/pickleshare_1602536217715/work
+Pillow==9.5.0
+prompt_toolkit @ file:///home/conda/feedstock_root/build_artifacts/prompt-toolkit_1727341649933/work
+psutil @ file:///D:/bld/psutil_1666155596250/work
+Pygments @ file:///home/conda/feedstock_root/build_artifacts/pygments_1700607939962/work
+pyparsing==3.1.4
+python-dateutil==2.9.0.post0
+pytz==2025.2
+pywin32==303
+pyzmq @ file:///D:/bld/pyzmq_1663830622471/work
+scikit-learn==1.0.2
+scipy==1.7.3
+seaborn==0.12.2
+six==1.17.0
+threadpoolctl==3.1.0
+tornado @ file:///D:/bld/tornado_1656937938087/work
+traitlets @ file:///home/conda/feedstock_root/build_artifacts/traitlets_1675110562325/work
+typing_extensions==4.7.1
+wcwidth @ file:///home/conda/feedstock_root/build_artifacts/wcwidth_1699959196938/work
+Werkzeug==2.2.3
+wincertstore==0.2
+zipp==3.15.0
